--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,9 @@
     
     <script src="/lib/react.development.js"></script>
     <script src="/lib/react-dom.development.js"></script>
-    <script src="https://s3.us-east-2.amazonaws.com/fec-profile/bundle.js"></script>
+    <!-- <script src="https://s3.us-east-2.amazonaws.com/fec-profile/bundle.js"></script>
     <script src="https://s3-us-west-1.amazonaws.com/fec-menu/bundle.js"></script>
-    <script src="https://s3-us-west-1.amazonaws.com/fec-project-reviews/bundle.js"></script>
-    <script src="https://s3.us-east-2.amazonaws.com/grubhubbundle/bundle.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/fec-project-reviews/bundle.js"></script> -->
+    <script src="http://localhost:3005/bundle.js"></script>
   </body>
 </html>
